name:                servant-workshop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/khanage/servant-workshop#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2017 Khan Thompson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bloggo
                     , Bloggo.Api
                     , Bloggo.Machinery
                     , Bloggo.Types
                     , Bloggo.Database
                     , Bloggo.UserData
                     , Bloggo.Item
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , http-media
                     , servant-server
                     , servant-auth
                     , servant-auth-server
                     , servant
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , resource-pool
                     , jose
                     , lens
                     , text
                     , bytestring
                     , transformers
                     , mtl
                     , unordered-containers
                     , async
                     , directory
                     , monad-logger
                     , warp
                     , wai
                     , aeson
                     , jwt
                     , jose
                     , time

executable another-service
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: .
  main-is: Standalone.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , servant-server
                     , aeson
                     , warp
                     , wai

executable main-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , servant-workshop
  default-language:    Haskell2010

test-suite servant-workshop-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-workshop
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/khanage/servant-workshop
